Fix NullAway errors